# template_experiment

./: .flake8  Makefile  README.md  pyproject.toml
src/: example.py
tests/: test_example.py
